not favicon error anymore

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -177,6 +177,10 @@
     }
 </style>
 
+<head>
+    <link rel="shortcut icon" href="#" />
+</head>
+
 <body>
     <section class="cartSection">
         <div class="cart">
