--- a/templates/profile.html
+++ b/templates/profile.html
@@ -46,10 +46,10 @@
         -moz-osx-font-smoothing: grayscale;
     }
     </style>
-    <title>
-        Salando
-    </title>
-
+    <head>
+        <title> Salando </title>
+        <link rel="shortcut icon" href="#" />
+    </head>
 
     <body>
         <section class="sectionProfile">
