--- a/templates/registration.html
+++ b/templates/registration.html
@@ -124,7 +124,9 @@
         -moz-osx-font-smoothing: grayscale;
     }
 </style>
-
+<head>
+    <link rel="shortcut icon" href="#" />
+</head>
 <body>
     <div class="login-page">
         <div class="form">
