--- a/templates/login.html
+++ b/templates/login.html
@@ -106,6 +106,11 @@
             -moz-osx-font-smoothing: grayscale;      
             }
     </style>
+    <head>
+        <link rel="shortcut icon" href="#" />
+    </head>
+
+
     <body>
         <div class="login-page">
             <div class="form">
